src/app/main/toolbar/toolbar.component.scss
@import 'src/app/core/scss/fuse';

:host {
    position: relative;
    display: flex;
    flex: 0 0 auto;
    z-index: 4;

    &.below {
        z-index: 2;
    }

    .mat-toolbar {
        background: inherit;
        color: inherit;
    }

    .logo {
        display: flex;
        align-items: center;

        .logo-icon {
            width: 38px;
        }
    }

    .loading-spinner {
        width: 32px;
        height: 32px;
    }

    .user-button,
    .search-button,
    .language-button,
    .quick-panel-toggle-button {
        min-width: 64px;
        height: 64px;

        @include media-breakpoint-down('xs') {
            height: 56px;
        }
    }

    .toggle-button-navbar {
        min-width: 56px;
        height: 56px;
    }

    .toolbar-separator {
        height: 64px;
        width: 1px;
        background: rgba(0, 0, 0, .12);

        @include media-breakpoint-down('xs') {
            height: 56px;
        }
    }
}

